--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>::Penuel Wikipedia</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 
 </head>
 <body>
     <section class="wiki">
         <div class="container">
             <img src="./wiki-logo.png" alt="logo" />
-            <h3>Search Wikipedia</h3>
+            <h3 class="title">Search Wikipedia</h3>
+            <div class="title-underline"></div>
             <form class="form">
                 <input type="text" class="form-input">
                 <button type="submit" class="submit-btn">search</button>
